tests/diagnostics/expressions/method_calls/non_struct_target/expect.txt
# exit: 1
input/lib.coppice:2:14: error: cannot call method 'missing' on non-struct type int64
      return 1.missing()
               ^
